Add jQuery >= 1.3.2 dependency to bower.json
This is the version number mentioned at the top of the script file, so
it seemed like a good place to start.

--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,9 @@
   "version": "1.0.1",
   "main": "jquery.popupwindow.js",
   "description": "Simple jQuery plugin for popup windows",
+  "dependencies" : {
+    "jquery" : ">=1.3.2"
+  },
   "ignore": [
     "example.html"
   ]
